--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,11 @@ matplotlib==3.5.0
 pillow==8.4.0
 jupyter==1.0.0
 scikit-image==0.18.3
-scikit-learn-intelex==2021.20211201.114820
+scikit-learn-intelex==2021.5.3
 imutils==0.5.4
 opencv-python==4.5.5.62
 PyWavelets==1.1.1
 skorch==0.11.0
-tabulate=0.8.9 
-tqdm=4.62.3
+tabulate==0.8.9 
+tqdm==4.62.3
+pandas
